# batnav

./: .gitignore  LICENSE.md  README.md  config_loader.py  generate_scenarios.py  main.py  pyproject.toml
config/: config.yaml
model/: __init__.py  bat.py  echo_analyzer.py  filterbank.py  glint_detector.py  model_scripts.md  scat_model.py  scenario_generator.py  signal_generator.py  simdata_io.py  target.py  utils.py  wave_params.py
plotting/: cochleagram.py  filterbank.py  glint_spacing.py  trajectory.py
tests/: glint_spacing_comp.py
